manifests/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: user14-hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user14-hello-world
  template:
    metadata:
      labels:
        app: user14-hello-world
    spec:
      containers:
        - resources: {}
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 1
            timeoutSeconds: 1 
            periodSeconds: 10 
            successThreshold: 1 
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: hello-world
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          image: quay.io/sbahar/test-workshop:v4
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
